--- a/docs/package.json
+++ b/docs/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "concurrently \"webpack-dev-server\" \"npm run start:spreed\" ",
+    "start:no-docker": "webpack-dev-server",
     "build": "webpack",
-    "build:prod": "cross-env NODE_ENV=production webpack"
+    "build:prod": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "start:build": "concurrently \"webpack-dev-server\"",
+    "pull:spreed": "docker pull spreed/webrtc",
+    "start:spreed": "npm run pull:spreed && docker run --rm -p 8443:8443 -i spreed/webrtc"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +18,7 @@
     "@types/react": "15.0.39",
     "@types/react-dom": "15.5.1",
     "awesome-typescript-loader": "3.2.2",
+    "concurrently": "3.5.0",
     "cross-env": "5.0.1",
     "css-loader": "0.28.4",
     "extract-text-webpack-plugin": "3.0.0",
@@ -21,6 +26,7 @@
     "node-sass": "4.5.3",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
