--- a/docs/server.conf
+++ b/docs/server.conf
@@ -1,6 +1,16 @@
 server {
     listen       80;
+    listen 443  ssl;
+
     server_name  localhost;
+
+     # Enable SSL
+    ssl_certificate /etc/nginx/ssl.crt;
+    ssl_certificate_key /etc/nginx/ssl.key;
+    ssl_session_timeout 5m;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
+    ssl_prefer_server_ciphers on;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/log/host.access.log  main;
