--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/classnames": "^2.2.1",
     "@types/react": "15.0.39",
     "cross-env": "5.0.1",
     "rimraf": "^2.6.1",
@@ -23,5 +24,8 @@
   "files": [
     "dist/"
   ],
-  "typings": "./dist/index.d.ts"
+  "typings": "./dist/index.d.ts",
+  "dependencies": {
+    "classnames": "^2.0.0"
+  }
 }
