--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/classnames": "^2.2.1",
+    "@types/classnames": "2.2.1",
     "@types/react": "15.0.39",
     "cross-env": "5.0.1",
-    "rimraf": "^2.6.1",
+    "rimraf": "2.6.1",
     "typescript": "2.4.2"
   },
   "peerDependencies": {
