--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-      "./src/**/*"
+      "./src/**/*",
+      "./custom.d.ts"
   ]
 }
