--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "typings": "./dist/index.d.ts",
   "dependencies": {
     "classnames": "^2.0.0",
-    "detectrtc": "^1.3.5"
+    "detectrtc": "^1.3.5",
+    "hark": "^1.1.5"
   }
 }
