--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "classnames": "^2.0.0",
     "detectrtc": "^1.3.5",
-    "hark": "^1.1.5"
+    "es6-promise": "^4.1.1",
+    "hark": "^1.1.5",
+    "webrtc-adapter": "^5.0.4"
   }
 }
