--- a/screen-capture-chrome-extension/src/manifest.json
+++ b/screen-capture-chrome-extension/src/manifest.json
@@ -14,7 +14,7 @@
        "js": [ "content.js" ],
        "all_frames": true,
        "run_at": "document_end",
-       "matches": ["https://*"]
+       "matches": ["https://*/*"]
     }],
     "icons" : {
         "48" : "icon.png"
