--- a/screen-capture-chrome-extension/tsconfig.json
+++ b/screen-capture-chrome-extension/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": false,
         "sourceMap": false,
         "rootDir": "src",
-        "outDir": "dist/js",
+        "outDir": "dist",
         "noEmitOnError": true
     }
 }
