--- a/screen-capture-chrome-extension/src/assets/manifest.json
+++ b/screen-capture-chrome-extension/src/assets/manifest.json
@@ -17,7 +17,9 @@
        "matches": ["https://*/*"]
     }],
     "icons" : {
-        "48" : "icon.png"
+        "16" : "icon.png",
+        "48" : "icon.png",
+        "128" : "icon.png"
     },
     "permissions": [
         "desktopCapture",
