--- a/screen-capture-chrome-extension/package.json
+++ b/screen-capture-chrome-extension/package.json
@@ -8,7 +8,7 @@
     "watch": "./node_modules/.bin/webpack -w"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/teamious/react-conf-webrtc/tree/master/screen-capture-chrome-extension"
