Content.ts and background.ts for Chrome to handle msg (#121)
* content.ts and background.ts to handle msg

* copy manifest file to dist

* add icon

* add id and action in the message payload

* MIT

--- a/screen-capture-chrome-extension/src/assets/manifest.json
+++ b/screen-capture-chrome-extension/src/assets/manifest.json
@@ -14,10 +14,12 @@
        "js": [ "content.js" ],
        "all_frames": true,
        "run_at": "document_end",
-       "matches": ["https://*"]
+       "matches": ["https://*/*"]
     }],
     "icons" : {
-        "48" : "icon.png"
+        "16" : "icon.png",
+        "48" : "icon.png",
+        "128" : "icon.png"
     },
     "permissions": [
         "desktopCapture",
