--- a/screen-capture-chrome-extension/package.json
+++ b/screen-capture-chrome-extension/package.json
@@ -8,16 +8,15 @@
     "watch": "./node_modules/.bin/webpack -w"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/teamious/react-conf-webrtc/"
+    "url": "https://github.com/teamious/react-conf-webrtc/tree/master/screen-capture-chrome-extension"
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/chrome": "~0.0.47",
+    "copy-webpack-plugin": "^4.0.1",
     "ts-loader": "~2.2.2",
     "typescript": "~2.4.1",
     "webpack": "~3.1.0"
