--- a/screen-capture-chrome-extension/package.json
+++ b/screen-capture-chrome-extension/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chrome": "~0.0.47",
     "copy-webpack-plugin": "^4.0.1",
+    "crx-webpack-plugin": "^0.1.5",
     "ts-loader": "~2.2.2",
     "typescript": "~2.4.1",
     "webpack": "~3.1.0"
