--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-conf-webrtc",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -31,7 +31,7 @@
     "detectrtc": "^1.3.5",
     "es6-promise": "^4.1.1",
     "hark": "^1.1.5",
-    "screen-capture-chrome-extension": "file:screen-capture-chrome-extension",
+    "screen-capture-chrome-extension": "^0.1.5",
     "webrtc-adapter": "^5.0.4"
   }
 }
