refactor code dependency of chrome screen shareing

--- a/screen-capture-chrome-extension/package.json
+++ b/screen-capture-chrome-extension/package.json
@@ -1,11 +1,10 @@
 {
   "name": "screen-capture-chrome-extension",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "Chrome extension for screen capture",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
-    "watch": "./node_modules/.bin/webpack -w"
+    "build": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "MIT",
@@ -13,6 +12,9 @@
     "type": "git",
     "url": "https://github.com/teamious/react-conf-webrtc/tree/master/screen-capture-chrome-extension"
   },
+  "files": [
+    "dist/"
+  ],
   "dependencies": {},
   "devDependencies": {
     "@types/chrome": "~0.0.47",
