--- a/screen-capture-chrome-extension/tsconfig.json
+++ b/screen-capture-chrome-extension/tsconfig.json
@@ -4,8 +4,9 @@
         "target": "es6",
         "noImplicitAny": false,
         "sourceMap": false,
+        "declaration": true,
         "rootDir": "src",
-        "outDir": "dist",
+        "outDir": "",
         "noEmitOnError": true
     }
 }
