--- a/screen-capture-chrome-extension/tsconfig.json
+++ b/screen-capture-chrome-extension/tsconfig.json
@@ -4,9 +4,18 @@
         "target": "es6",
         "noImplicitAny": false,
         "sourceMap": false,
-        "declaration": true,
+        "declaration": false,
         "rootDir": "src",
-        "outDir": "",
-        "noEmitOnError": true
-    }
+        "outDir": "dist",
+        "noEmitOnError": true,
+        "typeRoots": [
+            "./node_modules/@types"
+        ]
+    },
+    "include": [
+        "./src/message.ts"
+    ],
+    "exclude": [
+        "./node_modules"
+    ]
 }
